--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -62,6 +62,7 @@ Version 3.1.1
 - WBW: ZPMLDR and ZPM3 fixes, credit to Lars Nelson for finding ZPM3 source!
 - DDW: Add support for MBC sound card
 - WBW: Add support for "romless" booting
+- L?N: Fixes for ZCPR-D&J (buffer overflow, default drive/user)
 
 Version 3.1
 -----------
